<resources>
    <string name="app_name">通用磨坊</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="camera_error">未找到存储卡，无法存储照片</string>
    <string name="username">手机号码/用户名</string>
    <string name="password">密码</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="yanzhengma">获取验证码</string>
    <string name="person_data_string">个人资料</string>
    <string name="car_manage_string">车辆管理</string>
    <string name="login_out">退   出</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dispatch_NO_string">调度单号</string>
    <string name="car_NO_string">车牌号</string>
    <string name="load_count_string">装载数量</string>
    <string name="operate">操作</string>
    <string name="msg_no_sdcard">没有检测到外部扩展卡,头像、图片和录音均不可以.</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_welcome2">WelcomeActivity2</string>
</resources>
