<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ccc"
    android:orientation="vertical"
    tools:context="com.searun.GIS.fragment.MainFragment">

    <include
        layout="@layout/fragment_title"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#000"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dispatch_NO_string"/>
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#000"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/car_NO_string"/>
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#000"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/load_count_string"/>
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#000"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/operate"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#000"/>
</LinearLayout>
