<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">
<com.searun.GIS.view.CircleImageView
    android:id="@+id/icon"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:src="@mipmap/icon_tx"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:layout_marginTop="5dp"
        android:text="1111"/>
    <TextView
        android:id="@+id/person_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:text="@string/person_data_string"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_margin="10dp"
        android:background="#ccc"/>
    <TextView
        android:id="@+id/car_manage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:text="@string/car_manage_string"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_margin="10dp"
        android:background="#ccc"/>
    <Button
        android:id="@+id/login_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/redbj"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textColor="#fff"
        android:text="@string/login_out"/>

</LinearLayout>
